--- a/style.css
+++ b/style.css
@@ -338,7 +338,7 @@ section {
 /* FOOTER */
 
 .backg-foot {
-  background-image: url(assets/wires-instruments-table.jpg);
+  background-image: url(assets/wires-instruments-table.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
